# glyim

./: .gitignore  Cargo.toml  README.md  diff.diff  justfile  main  my_diff.diff  nextest.toml  pr.diff  test
crates/glyim-bench/: Cargo.toml
crates/glyim-bench/benches/: bench_incremental.rs  bench_stages.rs
crates/glyim-bench/src/: collector.rs  fixtures.rs  lib.rs  regression.rs
crates/glyim-bytecode/: Cargo.toml
crates/glyim-bytecode/src/: compiler.rs  interpreter.rs  lib.rs  op.rs  value.rs
crates/glyim-bytecode/src/tests/: compiler_tests.rs  interpreter_tests.rs  mod.rs  op_tests.rs
crates/glyim-cas-server/: Cargo.toml
crates/glyim-cas-server/src/: main.rs  verify.rs
crates/glyim-cas-server/src/grpc/: capabilities.rs  cas.rs  mod.rs
crates/glyim-cli/: Cargo.toml
crates/glyim-cli-tests-extra/: Cargo.toml
crates/glyim-cli-tests-extra/tests/: trycmd_tests.rs
crates/glyim-cli-tests-full/: Cargo.toml  glyim-cov.json
crates/glyim-cli-tests-full/tests/: _generic_debug.rs  _generic_debug2.rs  cross_tests.rs  integration.rs  jit_tests.rs  macro_e2e.rs  mutation_guard.rs  shims_tests.rs
crates/glyim-cli-tests-parser/: Cargo.toml
crates/glyim-cli-tests-parser/tests/: integration_parser.rs
crates/glyim-cli/src/: cross.rs  dump.rs  lib.rs  lockfile_integration.rs  macro_expand.rs  main.rs  manifest.rs  pipeline.rs  pipeline.rs.bak  test_debug.rs  test_runner.rs
crates/glyim-cli/tests/: assert_handler.rs  cli_integration.rs  cross_integration.rs  cross_tests.rs  generic_method_e2e.rs  generic_method_e2e_minimal.rs  integration.rs  jit_runtime.rs  jit_tests.rs  macro_cache_e2e.rs  macro_e2e.rs  macro_integration.rs  no_std_tests.rs  test_runner_tests.rs  ui.rs
crates/glyim-codegen-llvm/: Cargo.toml
crates/glyim-codegen-llvm/src/: alloc.rs  codegen.rs  debug.rs  demangle.rs  dispatch.rs  hash_shims.rs  helpers.rs  lib.rs  live.rs  micro_module.rs  orc.rs  runtime_shims.rs  tiered.rs  wasm_abi.rs
crates/glyim-codegen-llvm/tests/: compile_to_wasm.rs  filecheck_tests.rs  helpers.rs  snapshot_tests.rs  wasm_exports.rs  zero_init_tests.rs
crates/glyim-compiler/: Cargo.toml
crates/glyim-compiler/src/: cross.rs  docgen.rs  lib.rs  lockfile_integration.rs  macro_expand.rs  pipeline.rs  queries.rs
crates/glyim-compiler/tests/: semantic_query_tests.rs
crates/glyim-coverage/: Cargo.toml
crates/glyim-coverage-rt/: Cargo.toml
crates/glyim-coverage-rt/src/: lib.rs
crates/glyim-coverage/src/: data.rs  html_report.rs  lib.rs  report.rs  tests.rs
crates/glyim-doc/: Cargo.toml
crates/glyim-doc/site/: package.json  pnpm-lock.yaml  rspress.config.ts  tailwind.css  tsconfig.json
crates/glyim-doc/src/: highlight.rs  lib.rs  manifest.rs
crates/glyim-egraph/: Cargo.toml
crates/glyim-egraph/src/: analysis.rs  convert.rs  equivalence.rs  extract.rs  invariant.rs  lang.rs  lib.rs  optimize.rs  rules.rs
crates/glyim-fuzz/: Cargo.toml
crates/glyim-fuzz/fuzz_targets/: fuzz_lexer.rs  fuzz_parser.rs
crates/glyim-hir/: Cargo.toml
crates/glyim-hir/src/: decl_table.rs  dependency_names.rs  effects.rs  index.rs  item.rs  lib.rs  lower.rs  mangling.rs  monomorphize.rs  monomorphize.rs.bak2  node.rs  normalize.rs  remap_symbols.rs  semantic_hash.rs  tests.rs  types.rs
crates/glyim-hir/tests/: enum_specialization_test.rs  mangle_table.rs  mono_pass_separation.rs  nested_enum_rewrite.rs  pass_no_type_params.rs
crates/glyim-lint/: Cargo.toml
crates/glyim-lint/src/: lib.rs  main.rs  tests.rs
crates/glyim-lsp/: Cargo.toml
crates/glyim-lsp/src/: code_action.rs  completion.rs  database.rs  diagnostics.rs  driver.rs  folding.rs  formatting.rs  handler.rs  hover.rs  lib.rs  navigation.rs  reference_graph.rs  server.rs  symbol_index.rs
crates/glyim-macro-core/: Cargo.toml
crates/glyim-macro-core/src/: cache.rs  context.rs  executor.rs  expand.rs  lib.rs  registry.rs  wasi_stubs.rs  wasm_interface.rs
crates/glyim-macro-core/tests/: executor_tests.rs  expand_tests.rs  typed_executor_tests.rs  wasi_stubs_tests.rs
crates/glyim-macro-vfs/: Cargo.toml
crates/glyim-macro-vfs/src/: hash.rs  lib.rs  local.rs  remote.rs  store.rs
crates/glyim-merkle/: Cargo.toml
crates/glyim-merkle/src/: lib.rs  node.rs  root.rs  store.rs
crates/glyim-mono/: Cargo.toml
crates/glyim-mono/src/: concretize.rs  driver.rs  lib.rs  mangle_table.rs  mangling.rs  metadata.rs  queue.rs
crates/glyim-mutant/: Cargo.toml
crates/glyim-mutant/src/: config.rs  engine.rs  lib.rs  operators.rs  runner.rs
crates/glyim-mutant/tests/: engine_tests.rs  operators_tests.rs
crates/glyim-orchestrator/: Cargo.toml
crates/glyim-orchestrator/src/: artifacts.rs  graph.rs  incremental.rs  interface.rs  lib.rs  linker.rs  orchestrator.rs  symbols.rs
crates/glyim-parse/: Cargo.toml
crates/glyim-parse/src/: ast.rs  ast_to_cst.rs  cst_builder.rs  declarations.rs  doc_comment.rs  error.rs  lib.rs  parser.rs  parser.rs.tmp  recovery.rs
crates/glyim-parse/tests/: cst_roundtrip_tests.rs  parser_v030_tests.rs  property_tests.rs  recovery_tests.rs
crates/glyim-pkg/: Cargo.toml
crates/glyim-pkg/src/: cas_client.rs  error.rs  lib.rs  lockfile.rs  manifest.rs  registry.rs  resolver.rs  wasm_publish.rs  workspace.rs
crates/glyim-pkg/tests/: cas_client_tests.rs  cas_remote_tests.rs  lockfile_tests.rs  manifest_edge_tests.rs  registry_tests.rs  resolver_tests.rs  workspace_tests.rs
crates/glyim-profiler/: Cargo.toml
crates/glyim-profiler/src/: collector.rs  lib.rs  profile.rs
crates/glyim-query/: Cargo.toml
crates/glyim-query/src/: context.rs  dep_graph.rs  dependency.rs  fingerprint.rs  granularity.rs  incremental.rs  invalidation.rs  lib.rs  persistence.rs  query_key.rs  result.rs
crates/glyim-testr/: Cargo.toml
crates/glyim-testr/src/: artifact.rs  cache.rs  collector.rs  compiler.rs  config.rs  display.rs  executor.rs  flaky.rs  harness.rs  history.rs  incremental.rs  lib.rs  optimize.rs  prioritizer.rs  runner.rs  snapshot.rs  types.rs  watcher.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_lexer.rs  fuzz_lower.rs  fuzz_parser.rs  fuzz_typeck.rs  fuzz_unify.rs
(+656 files in other folders)
