[workspace]
resolver = "2"
members = [
    "crates/glyim-interner",
    "crates/glyim-diag",
    "crates/glyim-syntax",
    "crates/glyim-lex",
    "crates/glyim-parse",
    "crates/glyim-hir",
    "crates/glyim-typeck",
    "crates/glyim-macro-core",
    "crates/glyim-macro-vfs",
    "crates/glyim-codegen-llvm",
    "crates/glyim-pkg",
    "crates/glyim-cas-server",
    "crates/glyim-cli",
    "crates/glyim-doc",
    "crates/glyim-lint",
    "crates/glyim-fmt",
    "crates/glyim-cli-tests-parser",
    "crates/glyim-cli-tests-extra",
    "crates/glyim-cli-tests-full",
]

[workspace.package]
version = "0.5.0"
edition = "2024"
license = "MIT"
rust-version = "1.97.0"

# ── Faster development builds ──────────────────────────────────

[profile.dev]
opt-level = 0
debug = 1
split-debuginfo = "unpacked"

[profile.dev.package.inkwell]
opt-level = 2

[profile.dev.package.llvm-sys]
opt-level = 2

[profile.test]
lto = "thin"
codegen-units = 8
# SIGSEV on 1
opt-level = 0
