[workspace]
resolver = "2"
members = ["crates/glyim-interner",
    "crates/glyim-diag",
    "crates/glyim-syntax",
    "crates/glyim-lex",
    "crates/glyim-parse",
    "crates/glyim-hir",
    "crates/glyim-typeck",
    "crates/glyim-macro-core",
    "crates/glyim-macro-vfs",
    "crates/glyim-codegen-llvm",
    "crates/glyim-pkg",
    "crates/glyim-cas-server",
    "crates/glyim-cli",
    "crates/glyim-doc",
    "crates/glyim-lint",
    "crates/glyim-fmt",
    "crates/glyim-cli-tests-extra",
    "crates/glyim-cli-tests-full",
    "crates/glyim-testr",
    "crates/glyim-compiler",
    "crates/glyim-query",
    "crates/glyim-merkle",
    "crates/glyim-bytecode",
    "crates/glyim-egraph",
    "crates/glyim-orchestrator",
    "crates/glyim-mutant",
]

[workspace.package]
version = "0.5.0"
edition = "2024"
license = "MIT"
rust-version = "1.94.1"

# ── Faster development builds ──────────────────────────────────
[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.dev.package.inkwell]
opt-level = 2

[profile.dev.package.llvm-sys]
opt-level = 2
# [profile.test]
# codegen-units = 16
# # SIGSEV on 1
# opt-level = 0
