[package]
name = "glyim-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Benchmarking and profiling infrastructure for Glyim"

[dependencies]
glyim-profiler = { path = "../glyim-profiler" }
tempfile = "3"
glyim-compiler = { path = "../glyim-compiler" }
glyim-hir = { path = "../glyim-hir" }
glyim-interner = { path = "../glyim-interner" }
glyim-parse = { path = "../glyim-parse" }
glyim-typeck = { path = "../glyim-typeck" }
glyim-codegen-llvm = { path = "../glyim-codegen-llvm" }
glyim-query = { path = "../glyim-query" }
glyim-merkle = { path = "../glyim-merkle" }
glyim-orchestrator = { path = "../glyim-orchestrator" }
glyim-mutant = { path = "../glyim-mutant" }
glyim-lsp = { path = "../glyim-lsp" }
criterion = { version = "0.5", features = ["html_reports"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
blake3 = "1"

[target.'cfg(target_os = "linux")'.dependencies]
jemalloc-ctl = "0.5"
jemallocator = "0.5"

[lib]
name = "glyim_bench"
path = "src/lib.rs"

[[bench]]
name = "bench_incremental"
harness = false
