[package]
name = "glyim-bytecode"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Tier-0 bytecode interpreter for sub-millisecond JIT feedback"

[dependencies]
glyim-hir = { path = "../glyim-hir" }
glyim-interner = { path = "../glyim-interner" }
postcard = { version = "1", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
glyim-diag = { path = "../glyim-diag" }
