[package]
name = "glyim-cas-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Content-addressable storage server for the Glyim package manager"

[dependencies]
glyim-macro-vfs = { path = "../glyim-macro-vfs" }
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
