[package]
name = "glyim-cas-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Content-addressable storage server for the Glyim package manager"

[dependencies]
glyim-codegen-llvm = { path = "../glyim-codegen-llvm" }
glyim-macro-vfs = { path = "../glyim-macro-vfs" }
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tonic = { version = "0.14", features = ["transport", "server"] }
prost = "0.14"
bazel-remote-apis = "0.27"
tokio-stream = "0.1"

[dev-dependencies]
tempfile = "3"
