[package]
name = "glyim-cli-tests-extra"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Heavy test dependencies for CLI (trycmd, rstest, proptest)"

# LEAVE THIS EMPTY
[dependencies]

# MOVE EVERYTHING HERE
[dev-dependencies]
glyim-compiler = { path = "../glyim-compiler" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
glyim-testr = { path = "../glyim-testr" }
trycmd = "1.2"
rstest = "0.26"
proptest = "1"
