[package]
name = "glyim-cli-tests-full"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Full CLI integration tests (includes codegen / LLVM linkage)"

[dependencies]
glyim-cli = { path = "../glyim-cli" }
glyim-macro-core = { path = "../glyim-macro-core" }
glyim-macro-vfs = { path = "../glyim-macro-vfs" }
glyim-parse = { path = "../glyim-parse" }
glyim-hir = { path = "../glyim-hir" }
glyim-interner = { path = "../glyim-interner" }
tempfile = "3"
wat = "1"
