[package]
name = "glyim-cli-tests-full"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Full CLI integration tests (includes codegen / LLVM linkage)"

# LEAVE THIS COMPLETELY EMPTY
[dependencies]

# PUT EVERYTHING HERE
[dev-dependencies]
glyim-compiler = { path = "../glyim-compiler" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
glyim-testr = { path = "../glyim-testr" }
glyim-macro-core = { path = "../glyim-macro-core" }
glyim-macro-vfs = { path = "../glyim-macro-vfs" }
glyim-parse = { path = "../glyim-parse" }
glyim-hir = { path = "../glyim-hir" }
glyim-interner = { path = "../glyim-interner" }
glyim-codegen-llvm = { path = "../glyim-codegen-llvm" }
glyim-diag = { path = "../glyim-diag" }
glyim-typeck = { path = "../glyim-typeck" }
tempfile = "3"
wat = "1"
dirs-next = "2"
insta = { version = "1", features = ["yaml"] }
proptest = "1"
rstest = "0.26"
