[package]
name = "glyim-cli-tests-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Parser and type‑checker integration tests (no codegen linkage)"

[dependencies]
glyim-parse = { path = "../glyim-parse" }
glyim-typeck = { path = "../glyim-typeck" }
glyim-hir = { path = "../glyim-hir" }
glyim-interner = { path = "../glyim-interner" }
tempfile = "3"
