[package]
name = "glyim-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "CLI entry point for the Glyim compiler"

[lib]
name = "glyim_cli"
path = "src/lib.rs"

[[bin]]
name = "glyim"
path = "src/main.rs"

[dependencies]
toml = "1.0"
glyim-parse = { path = "../glyim-parse" }
glyim-hir = { path = "../glyim-hir" }
glyim-typeck = { path = "../glyim-typeck" }
glyim-macro-core = { path = "../glyim-macro-core" }
glyim-macro-vfs = { path = "../glyim-macro-vfs" }
glyim-codegen-llvm = { path = "../glyim-codegen-llvm" }
glyim-diag = { path = "../glyim-diag" }
glyim-interner = { path = "../glyim-interner" }
glyim-pkg = { path = "../glyim-pkg" }
inkwell = { version = "0.9", features = ["llvm22-1"] }
clap = { version = "4", features = ["derive"] }
tempfile = "3"
sha2 = "0.11"
hex = "0.4"
dirs-next = "2"

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
glyim-codegen-llvm = { path = "../glyim-codegen-llvm" }
glyim-diag = { path = "../glyim-diag" }
glyim-parse = { path = "../glyim-parse" }
