[package]
name = "glyim-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "CLI entry point for the Glyim compiler"

[lib]
name = "glyim_cli"
path = "src/lib.rs"

[[bin]]
name = "glyim"
path = "src/main.rs"

[dependencies]
glyim-lex = { path = "../glyim-lex" }
wat = "1"
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-chrome = "0.7"
tracing-tree = "0.4"
pretty = "0.12"
owo-colors = "4"
supports-color = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = "3"
toml = "1.1.2"
glyim-parse = { path = "../glyim-parse" }
glyim-hir = { path = "../glyim-hir" }
glyim-typeck = { path = "../glyim-typeck" }
glyim-macro-core = { path = "../glyim-macro-core" }
glyim-macro-vfs = { path = "../glyim-macro-vfs" }
glyim-codegen-llvm = { path = "../glyim-codegen-llvm" }
glyim-compiler = { path = "../glyim-compiler" }
glyim-testr = { path = "../glyim-testr" }
glyim-mutant = { path = "../glyim-mutant" }
tokio = { version = "1", features = ["full"] }
glyim-diag = { path = "../glyim-diag" }
glyim-interner = { path = "../glyim-interner" }
glyim-pkg = { path = "../glyim-pkg" }
glyim-doc = { path = "../glyim-doc" }
glyim-orchestrator = { path = "../glyim-orchestrator" }
webbrowser = "1.2"
inkwell = { version = "0.9", features = ["llvm22-1-prefer-dynamic"] }
clap = { version = "4", features = ["derive"] }
tempfile = "3"
sha2 = "0.11"
libc = "0.2"
hex = "0.4"
dirs-next = "2"

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
wat = "1"
rstest = "0.26"
trycmd = "1.2"
glyim-codegen-llvm = { path = "../glyim-codegen-llvm" }
glyim-compiler = { path = "../glyim-compiler" }
glyim-testr = { path = "../glyim-testr" }
glyim-mutant = { path = "../glyim-mutant" }
tokio = { version = "1", features = ["full"] }
glyim-diag = { path = "../glyim-diag" }
glyim-parse = { path = "../glyim-parse" }
proptest = "1"
