[package]
name = "glyim-codegen-llvm"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "LLVM IR code generation via Inkwell for Glyim"

[dependencies]
tracing = { version = "0.1", features = ["attributes"] }
thiserror = "2"
glyim-hir = { path = "../glyim-hir" }
glyim-interner = { path = "../glyim-interner" }
glyim-diag = { path = "../glyim-diag" }
glyim-parse = { path = "../glyim-parse" }
inkwell = { version = "0.9", features = ["llvm22-1"] }
llvm-sys = "221"

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
glyim-parse = { path = "../glyim-parse" }
