[package]
name = "glyim-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core compiler pipeline for Glyim"

[dependencies]
glyim-lex = { path = "../glyim-lex" }
glyim-parse = { path = "../glyim-parse" }
glyim-hir = { path = "../glyim-hir" }
glyim-typeck = { path = "../glyim-typeck" }
glyim-macro-core = { path = "../glyim-macro-core" }
glyim-macro-vfs = { path = "../glyim-macro-vfs" }
glyim-codegen-llvm = { path = "../glyim-codegen-llvm" }
glyim-diag = { path = "../glyim-diag" }
glyim-interner = { path = "../glyim-interner" }
glyim-pkg = { path = "../glyim-pkg" }
glyim-query = { path = "../glyim-query" }
wat = "1"
glyim-doc = { path = "../glyim-doc" }
inkwell = { version = "0.9", features = ["llvm22-1-prefer-dynamic"] }
tempfile = "3"
sha2 = "0.11"
hex = "0.4"
dirs-next = "2"
tracing = { version = "0.1", features = ["attributes"] }
serde_json = "1"
toml = "1.1.2"

[dev-dependencies]
rstest = "0.24"
tempfile = "3"
