[package]
name = "glyim-coverage-rt"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Coverage runtime for AOT Glyim programs (zero dependencies)"

[lib]
crate-type = ["staticlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
