[package]
name = "glyim-coverage"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Coverage data processing and reporting for Glyim"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
owo-colors = "4"
walkdir = "2"
similar = "3"
glyim-diag = { path = "../glyim-diag" }
glyim-interner = { path = "../glyim-interner" }
