[package]
name = "glyim-doc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Documentation generator for Glyim"

[dependencies]
pulldown-cmark = "0.13"
syntect = { version = "5", default-features = false, features = ["parsing", "html", "regex-onig", "default-themes", "yaml-load"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
glyim-hir = { path = "../glyim-hir" }
glyim-interner = { path = "../glyim-interner" }
sha2 = "0.11"
hex = "0.4"
html-escape = "0.2"

[dev-dependencies]
glyim-parse = { path = "../glyim-parse" }
