[package]
name = "glyim-egraph"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "E-graph based algebraic optimization for Glyim"

[dependencies]
egg = "0.11"
glyim-hir = { path = "../glyim-hir" }
glyim-interner = { path = "../glyim-interner" }
serde = { version = "1", features = ["derive"] }
sha2 = "0.11"
glyim-diag = { path = "../glyim-diag" }
tracing = "0.1"

[dev-dependencies]
glyim-typeck = { path = "../glyim-typeck" }
glyim-parse = { path = "../glyim-parse" }
