[package]
name = "glyim-hir"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "High-level intermediate representation for Glyim"

[dependencies]
thiserror = "2"
glyim-parse = { path = "../glyim-parse" }
glyim-interner = { path = "../glyim-interner" }
glyim-diag = { path = "../glyim-diag" }
tracing = "0.1"
