[package]
name = "glyim-hir"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "High-level intermediate representation for Glyim"

[dependencies]
glyim-lex = { path = "../glyim-lex" }
thiserror = "2"
glyim-parse = { path = "../glyim-parse" }
glyim-interner = { path = "../glyim-interner" }
glyim-diag = { path = "../glyim-diag" }
tracing = "0.1"
sha2 = "0.11"
serde = "1"

[dev-dependencies]
glyim-typeck = { path = "../glyim-typeck" }
glyim-parse = { path = "../glyim-parse" }
