[package]
name = "glyim-macro-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Typed macro expansion engine for Glyim"

[dependencies]
wasmtime = { version = "44.0.1", default-features = true }
anyhow = "1"
glyim-syntax = { path = "../glyim-syntax" }
glyim-interner = { path = "../glyim-interner" }
glyim-diag = { path = "../glyim-diag" }

[dev-dependencies]
wat = "1"
