[package]
name = "glyim-macro-vfs"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Content-addressable store and virtual file system for Glyim macros"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11.0"
