[package]
name = "glyim-mono"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Monomorphization engine for Glyim"

[dependencies]
glyim-hir = { path = "../glyim-hir" }
glyim-interner = { path = "../glyim-interner" }
glyim-typeck = { path = "../glyim-typeck" }
