[package]
name = "glyim-parse"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Pratt parser and recursive-descent parser for Glyim"

[dependencies]
miette = { version = "7", features = ["fancy-no-backtrace"] }
miette-derive = "7"
thiserror = "2"
glyim-syntax = { path = "../glyim-syntax" }
glyim-lex = { path = "../glyim-lex" }
glyim-diag = { path = "../glyim-diag" }
glyim-interner = { path = "../glyim-interner" }
rowan = "0.16"
