[package]
name = "glyim-pkg"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Package manager for Glyim - manifest parsing, dependency resolution, lockfile generation"

[dependencies]
glyim-interner = { path = "../glyim-interner" }
toml = "0.8"
semver = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
sha2 = "0.10"
hex = "0.4"
