[package]
name = "glyim-pkg"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Package manager for Glyim - manifest parsing, dependency resolution, lockfile generation"

[dependencies]
glyim-interner = { path = "../glyim-interner" }
glyim-macro-vfs = { path = "../glyim-macro-vfs" }
toml = "0.9"
semver = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
sha2 = "0.11"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
