[package]
name = "glyim-profiler"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Lightweight profiling collector for Glyim pipeline stages"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
