[package]
name = "glyim-testr"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Fast, production-grade test runner for Glyim"

[dependencies]
glyim-cli = { path = "../glyim-cli" }
glyim-hir = { path = "../glyim-hir" }
glyim-parse = { path = "../glyim-parse" }
glyim-interner = { path = "../glyim-interner" }
sea-orm = { version = "2.0.0-rc", features = ["sqlx-sqlite", "runtime-tokio", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "sync", "time", "io-util"] }
notify-debouncer-full = "0.7"
owo-colors = "4"
similar = "2"
regex = "1"
tempfile = "3"
thiserror = "2"
